<resources>
    <string name="app_name" translatable="false">SC</string>
    <string name="hey_boys_wats_up">HEY BOYS WATS UP</string>
    <string name="hello_string">HELLO@string</string>
    <string name="hi_i_am_uppal_balu">hi i am uppal balu</string>
    <string name="hiiiiiiiiiiii">hiiiiiiiiiiii</string>
    <string name="helloaaaa">helloaaaa</string>
    <string name="tooo">TODO</string>
    <string name="uppalbaluu">uppalbaluu</string>
    <string name="tiktok">tiktok</string>
    <string name="ttt">ttt</string>
    <string name="buttton">Button</string>
    <string name="page2">page2</string>
    <string name="too">TODO</string>
    <string name="sub_conspiracy">SUB CONSPIRACY</string>
    <string name="frozen">Frozen</string>
    <string name="button">Button</string>
    <string name="denver">Denver</string>
    <string name="illuminati">Illuminati</string>
    <string name="aliens">Aliens</string>
    <string name="todo" />
    <string name="about">About</string>
    <string name="what_if_we_told_you_the_walt_disney_company_created_the_movie_frozen_to_alter_google_s_search_algorithm_so_that_when_people_looked_up_some_variation_of_quot_disney_frozen_quot_information_about_the_movie_and_not_about_walt_disney_himself_being_cryogenically_frozen_would_come_up_screen_rant_writes_that_cigarettes_used_to_be_cropped_out_of_disney_s_hands_in_an_attempt_to_keep_up_with_the_mouse_house_s_family_friendly_branding_so_while_creating_a_hit_movie_to_mess_with_an_internet_algorithm_sounds_nutty_it_kind_of_also_makes_sense_and_if_it_was_intentional_disney_is_full_of_geniuses">What if we told you The Walt Disney Company created the movie Frozen to alter Google\'s search algorithm so that when people looked up some variation of \"Disney Frozen,\" information about the movie—and not about Walt Disney himself being cryogenically frozen—would come up? Screen Rant writes that cigarettes used to be cropped out of Disney\'s hands in an attempt to keep up with the Mouse House\'s family-friendly branding, so while creating a hit movie to mess with an internet algorithm sounds nutty, it kind of also makes sense. And if it was intentional, Disney is full of geniuses.</string>
    <string name="conspiracy_theorists_posit_that_the_denver_international_airport_dia_is_a_hub_for_the_lizard_people_who_run_the_government_and_much_of_the_world_just_read_our_feature_about_it_some_believe_dia_is_the_home_base_of_the_illuminati_while_others_believe_it_s_actually_a_portal_to_hell_with_blucifer_the_giant_blue_horse_sculpture_which_killed_the_artist_who_made_it_with_demonic_glowing_red_eyes_guarding_the_gateway_there_are_the_weird_murals_on_the_walls_depicting_nazi_imagery_and_a_commemoration_capstone_plaque_that_mentions_the_new_world_airport_commission_an_organization_that_does_not_exist_between_that_the_gargoyles_in_jeppesen_terminal_and_the_interactive_gargoyle_that_welcomed_travelers_to_the_quot_illuminati_headquarters_quot_before_correcting_himself_and_welcoming_the_masses_to_quot_denver_international_airport_quot_dia_is_either_poking_fun_at_all_the_conspiracies_surrounding_the_facility_or_they_re_hiding_in_plain_sight">Conspiracy theorists posit that the Denver International Airport (DIA) is a hub for the lizard people who run the government and much of the world. Just read our feature about it. Some believe DIA is the home base of the Illuminati, while others believe it\'s actually a portal to hell, with Blucifer (the giant blue horse sculpture—which killed the artist who made it—with demonic, glowing red eyes) guarding the gateway. There are the weird murals on the walls depicting Nazi imagery and a commemoration capstone plaque that mentions the New World Airport Commission (an organization that does not exist). Between that, the gargoyles in Jeppesen terminal, and the interactive gargoyle that welcomed travelers to the \"Illuminati Headquarters\" before correcting himself and welcoming the masses to \"Denver International Airport.\" DIA is either poking fun at all the conspiracies surrounding the facility, or they\'re hiding in plain sight.</string>
    <string name="in_a_historical_sense_the_term_quot_illuminati_quot_refers_to_the_bavarian_illuminati_a_secret_society_that_operated_for_only_a_decade_from_1776_to_1785_this_organization_was_founded_by_adam_weishaupt_a_german_law_professor_who_believed_strongly_in_enlightenment_ideals_and_his_lluminatenorden_sought_to_promote_those_ideals_among_elites_weishaupt_wanted_to_educate_illuminati_members_in_reason_philanthropy_and_other_secular_values_so_that_they_could_influence_political_decisions_when_they_came_to_power_quot_it_was_pretty_ambitious_for_six_or_nine_guys_but_they_really_wanted_to_take_over_the_world_quot_says_chris_hodapp_the_co_author_of_conspiracy_theories_and_secret_societies_for_dummies_with_alice_vonkannon_the_illuminati_s_goals_and_reputation_often_exceeded_their_means_hodapp_notes_in_its_early_days_the_group_was_just_a_handful_of_people_and_even_at_its_largest_it_only_consisted_of_somewhere_between_650_and_2_500_members_the_group_grew_to_that_size_by_becoming_a_sort_of_sleeper_cell_within_other_groups_illuminati_members_joined_freemason_lodges_to_recruit_members_for_their_own_competing_secret_society">In a historical sense, the term \"Illuminati\" refers to the Bavarian Illuminati, a secret society that operated for only a decade, from 1776 to 1785. This organization was founded by Adam Weishaupt, a German law professor who believed strongly in Enlightenment ideals, and his lluminatenorden sought to promote those ideals among elites. Weishaupt wanted to educate Illuminati members in reason, philanthropy, and other secular values so that they could influence political decisions when they came to power. \"It was pretty ambitious for six or nine guys, but they really wanted to take over the world,\" says Chris Hodapp, the co-author of Conspiracy Theories and Secret Societies for Dummies with Alice VonKannon. The Illuminati\'s goals — and reputation — often exceeded their means, Hodapp notes. In its early days, the group was just a handful of people. And even at its largest, it only consisted of somewhere between 650 and 2,500 members. The group grew to that size by becoming a sort of sleeper cell within other groups — Illuminati members joined Freemason lodges to recruit members for their own competing secret society.</string>
    <string name="the_series_of_boulders_that_make_up_stonehenge_have_long_puzzled_experts_and_provided_material_ripe_for_conspiracy_theorists_most_pertinent_is_the_question_how_were_the_stones_some_weighing_50_tons_transported_and_arranged_to_where_they_sit_today_without_basic_transportation_technology_such_as_wheels_which_were_invented_more_than_five_centuries_after_stonehenge_is_believed_to_have_been_built_there_is_no_obvious_answer_to_how_the_biggest_stones_were_moved_much_of_what_scientists_do_know_about_the_construction_of_stonehenge_is_from_educated_guesses_and_constantly_evolving_research_the_newest_of_which_suggests_that_in_fact_two_of_the_largest_boulders_that_make_up_stonehenge_have_always_been_more_or_less_where_they_sit_today_alternatively_of_course_scientists_could_shun_the_research_and_read_erich_von_d_niken_s_seminal_book_chariots_of_the_gods_which_makes_the_argument_that_many_ancient_megastructures_such_as_stonehenge_the_egyptian_pyramids_and_the_moai_heads_of_easter_island_were_built_using_know_how_passed_down_from_god_like_aliens_to_mankind_says_the_independent_though_why_the_extraterrestrials_would_pass_on_the_knowledge_of_how_to_build_stonehenge_but_not_the_wheel_is_anyone_s_guess">The series of boulders that make up Stonehenge have long puzzled experts and provided material ripe for conspiracy theorists. Most pertinent is the question: how were the stones - some weighing 50 tons - transported and arranged to where they sit today? Without basic transportation technology, such as wheels (which were invented more than five centuries after Stonehenge is believed to have been built), there is no obvious answer to how the biggest stones were moved. Much of what scientists do know about the construction of Stonehenge is from educated guesses and constantly evolving research, the newest of which suggests that in fact two of the largest boulders that make up Stonehenge have always been “more or less” where they sit today. Alternatively of course, scientists could shun the research and read Erich von Däniken’s seminal book Chariots of the Gods?, “which makes the argument that many ancient megastructures such as Stonehenge, the Egyptian pyramids, and the Moai heads of Easter Island were built using know-how passed down from God-like aliens to mankind”, says The Independent. Though why the extraterrestrials would pass on the knowledge of how to build Stonehenge but not the wheel is anyone’s guess...</string>
    <string name="sai_subramanyam_app_developer">Sai Subramanyam - App Developer</string>
    <string name="sc_is_an_app_where_you_can_read_interesting_and_craziest_conspiracy_theories_the_theories_will_be_updated_for_every_2_weeks_and_even_more_features_would_be_added_like_chatsbots_and_more_thank_you_for_downloading_the_app">SC is an app where you can read interesting and craziest conspiracy theories. The theories will be updated for every 2 weeks and even more features would be added like chatsbots and more.Thank you for downloading the app</string>
    <string name="Sunshine">sunshine</string>
</resources>